# client-rust-fix

./: .env.example  .gitignore  Cargo.toml  README.md  acceptor_sequence.mmd  clippy.toml  pattern_acceptor.md  sample_fix_config.yml
.github/workflows/: clippy.yml
config/: sample_fix_config.yaml
src/: lib.rs  main.rs
src/messages/: deprecated.rs  factory.rs
src/messages/utils/: mod.rs
src/scenarios/: rfq_listen.rs  rfq_publish.rs  single_leg_order.rs  single_order_add_cancel.rs
src/setup/: mod.rs  setup_env.rs  setup_heartbeat.rs  setup_keys.rs  setup_logging.rs  setup_rfq.rs  setup_session.rs  setup_trading.rs
