[package]
name = "client-rust-fix"
version = "0.1.8"
edition = "2021"
rust-version = "1.67.1"

[dependencies]
chrono = "0.4.38"
jwtk = "0.3.0"
native-tls = "0.2.11"
parking_lot = "0.12.2"
quickfix = "0.1.4"
quickfix-msg44 = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.8.0"
log = "0.4.21"
simplelog = "0.12.2"
auditable = "0.2.0"
rustfmt = "0.10.0"
dotenvy = "0.15.0"
clap = { version = "4.0", features = ["derive"] }
tungstenite = { version = "0.20.1", features = ["native-tls"] }
http = "1.1.0"
url = "2.2.0"
io = "0.0.2"
cargo-msrv = "0.15.1"

[package.metadata.clippy]
# Disable the needless_return lint globally
# Note: This key does not exist in clippy.toml directly, hence inline attributes are preferred.

